# weather-api

./: .gitignore  CMakeLists.txt  main.cpp  server.cpp
include/: AirQualityData.h  AppUI.h  BoostHttpClient.h  Config.h  HttpClient.h  JsonExtractable.h  JsonParser.h  WeatherClient.h  WeatherData.h
include/api/: AppComponent.h  AuthController.h  WeatherController.h  WeatherDto.h
include/auth/: AuthService.h  PasswordManager.h  SessionManager.h
include/db/: Database.h
include/models/: Query.h  User.h
include/utils/: Colors.h
src/: AirQualityData.cpp  AppUI.cpp  BoostHttpClient.cpp  Config.cpp  JsonParser.cpp  WeatherClient.cpp  WeatherData.cpp
src/auth/: AuthService.cpp  PasswordManager.cpp  SessionManager.cpp
src/db/: Database.cpp
